--- a/Events/index.html
+++ b/Events/index.html
@@ -18,6 +18,9 @@
 
     <button id="btn1">Click me!</button>
     <div id="div1">This is a div</div>
+
+    <br>
+    <button id="mode">Change Background</button>
     <script src="script.js"></script>    
 </body>
 </html>
